<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Knot It</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Knot It</string>
    <string name="title_section1">Knots</string>
    <string name="title_section2">Archive</string>
    <string name="title_section3">Trash</string>
    <string name="title_activity_add_new">Add New</string>
    <string name="title_activity_detail_view">Detail View</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Add_Knot">Add Knot</string>
    <string name="Edit_Knot">Edit Knot</string>
    <string name="cannot_create_file">Cannot create file</string>
    <string name="Take_Photo">Take Photo</string>
    <string name="Choose_from_Gallery">Choose from Gallery</string>
    <string name="Add_Photo">Add Photo</string>
    <string name="problem_saving_photo">There was a problem saving photo....</string>
    <string name="Choose_date_time">Choose Date and Time</string>
    <string name="problem_setting_image">Wooahh!! Looks like there was a problem setting this image.</string>
    <string name="image_capture_fail">Image capture failed</string>
    <string name="edited_on">Edited on </string>
    <string name="moved_to_trash">Moved to Trash</string>
    <string name="Done_for_now">Moved to Archive</string>
    <string name="moved_to_Knots">Moved to Knots</string>
    <string name="delete_forever_question">Do you want to delete this Knot forever?</string>
    <string name="delete">Delete</string>
    <string name="deleted_forever">Deleted forever</string>
    <string name="cancel">Cancel</string>
    <string name="no_email_client">There are no email clients installed.</string>
    <string name="clear_all_question">Do you want to clear all the data?</string>
    <string name="clear_data">Reset Data</string>
    <string name="data_clear">Data Clear</string>
    <string name="archive">Archive</string>
    <string name="trash">Trash</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="move_to_trash">Move to Trash</string>
    <string name="move_to_archive">Move to Archive</string>
    <string name="delete_knot">Delete Knot</string>
    <string name="move_to_knots">Move to Knots</string>
    <string name="Knots">Knots</string>
    <string name="rate">Rate</string>
    <string name="rate_message">If you enjoy using Knot It, please take a moment to rate it. Thanks for your support!</string>
    <string name="remind_me_later">Remind me later</string>
    <string name="no_thanks">No, Thanks</string>
    <string name="welcome_message">Want to be reminded about something important? Just Write it down using the plus button at the bottom right of your screen on the main page and KNOT IT up! It\'s that simple. \n Now you will KNOT forget anything!</string>
    <string name="welcome">Welcome to Knot It.</string>
    <string name="remove_image">Remove Image</string>
    <string name="add_image">Add Image</string>
    <string name="feedback">Feedback</string>
    <string name="sort_by">Sort By</string>
    <string name="sort_by_newest">Sort by Newest</string>
    <string name="Sort_by_Reminder">Sort by Upcoming</string>
    <string name="sort_by_title">Sort by Title</string>
    <string name="sort_by_edited">Sort by Edited</string>
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="houston_problem_error">Houston, we have a problem here!\nNo Knots Found</string>
    <string name="Set_Vibration_Pattern">Set Vibration Pattern</string>
    <string name="Knot_It_Default">Knot It Default</string>
    <string name="Android_Default">Android Default</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_every_hour">Repeat every hour</string>
    <string name="repeat_every_day">Repeat every day</string>
    <string name="repeat_every_week">Repeat every week</string>
    <string name="about">About</string>
    <string name="set_sound">Set Sound</string>
    <string name="title_activity_about">About</string>
    <string name="hello_world">Hello world!</string>
    <string name="version">Version 1.5.3</string>
    <string name="contributors">Contributors</string>
    <string name="contibute">Contribute</string>
    <string name="want_to_contri">Want To Contribute?</string>
    <string name="share_message">Take a look at \"Knot It\" -\nhttps://play.google.com/store/apps/details?id=com.forkthecode.knotit</string>
    <string name="share_with">Share with...</string>
    <string name="repeat_every_min">Repeat every minute</string>

</resources>
