<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.forkthecode.knotit.About">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/imageView"
                android:src="@drawable/knotit_launcher"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/app_name"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:id="@+id/textView2"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/version"
                android:layout_marginTop="@dimen/margin_5"
                android:id="@+id/textView"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/contributors"
                android:id="@+id/textView4" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5"
                android:id="@+id/listView"
                android:headerDividersEnabled="true"
                android:footerDividersEnabled="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_5"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/want_to_contri"
                android:id="@+id/textView3" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contibute"
                android:textColor="#ffffff"
                android:id="@+id/button"
                android:onClick="contribute"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:padding="@dimen/activity_horizontal_margin"
                android:background="@color/accent"
                android:layout_gravity="center" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
